force-app/main/default/objects/Standing_Quote_Opportunity_Product__c/Standing_Quote_Opportunity_Product__c.object-meta.xml
<CustomObject>
    <description>Stores the Opportunity Products for a standing quote. These records will be associated to an opportunity, and will have details of products from a specific agreement</description>
    <label>Standing Quote Opportunity Product</label>
    <nameField>
        <displayFormat>SQOP-{0000000}</displayFormat>
        <label>Standing Quote Opportunity Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Standing Quote Opportunity Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>