force-app/main/default/objects/Standing_Quote_Opportunity_Product__c/fields/Material_Group_Description__c.field-meta.xml
<CustomField>
    <fullName>Material_Group_Description__c</fullName>
    <description>Field to store Material Group Description</description>
    <label>Material Group Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>