force-app/main/default/objects/Standing_Quote_Opportunity_Product__c/fields/Material_Name__c.field-meta.xml
<CustomField>
    <fullName>Material_Name__c</fullName>
    <description>Field to store Product name</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Standing Quote Opportunity Products</relationshipLabel>
    <relationshipName>Standing_Quote_Opportunity_Products</relationshipName>
    <type>Lookup</type>
</CustomField>