force-app/main/default/objects/Standing_Quote_Opportunity_Product__c/validationRules/CheckMGandMaterialInSameRecord.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckMGandMaterialInSameRecord</fullName>
    <active>true</active>
    <description>This validation error prevents user from adding material group and material in the same record.</description>
    <errorConditionFormula>AND(
NOT (
OR (
$Profile.Name = $Label.ProfileSystemAdmin,
$Profile.Name = $Label.ProfileDataSteward,
$Setup.cs_Apex_Settings__c.Bypass_All_Validations__c
)
),
    NOT(ISBLANK(Material_Group__c)),
    NOT(ISBLANK(Material_Name__c))
)</errorConditionFormula>
    <errorMessage>You can&apos;t add a material group and product at the same time</errorMessage>
</ValidationRule>